--- a/PilkadaJateng/Layouts/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/PilkadaJateng/Layouts/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -24,27 +24,35 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="xN1-oI-Pq0">
-                                <rect key="frame" x="10" y="180" width="300" height="120"/>
+                                <rect key="frame" x="10" y="50" width="300" height="380"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pilwara" translatesAutoresizingMaskIntoConstraints="NO" id="3dH-xg-8u1">
-                                        <rect key="frame" x="0.0" y="0.0" width="300" height="100"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" image="pilwara" translatesAutoresizingMaskIntoConstraints="NO" id="3dH-xg-8u1">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="175"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Pilihan Wajah Rakyat" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IZT-9X-LSV">
-                                        <rect key="frame" x="0.0" y="100" width="300" height="20"/>
+                                        <rect key="frame" x="0.0" y="175" width="300" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="i4W-bL-MTh"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo maskot 1" translatesAutoresizingMaskIntoConstraints="NO" id="0xA-7h-Gk6">
+                                        <rect key="frame" x="0.0" y="205" width="300" height="175"/>
+                                    </imageView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="120" id="9cg-yQ-sIT"/>
+                                    <constraint firstItem="0xA-7h-Gk6" firstAttribute="height" secondItem="3dH-xg-8u1" secondAttribute="height" id="8IL-XI-kY0"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="xN1-oI-Pq0" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="50" id="Cbj-U6-DQG"/>
                             <constraint firstItem="xN1-oI-Pq0" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="10" id="DE2-qv-Lbc"/>
                             <constraint firstItem="xN1-oI-Pq0" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="JVJ-Bb-l1l"/>
+                            <constraint firstAttribute="bottom" secondItem="xN1-oI-Pq0" secondAttribute="bottom" constant="50" id="dMW-hd-Ilr"/>
                             <constraint firstAttribute="trailing" secondItem="xN1-oI-Pq0" secondAttribute="trailing" constant="10" id="dWc-0m-m9D"/>
                             <constraint firstItem="xN1-oI-Pq0" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="y04-Xc-qSf"/>
                         </constraints>
@@ -57,6 +65,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="logo maskot 1" width="2113" height="2537"/>
         <image name="pilwara" width="632" height="148"/>
     </resources>
 </document>
