--- a/PilkadaJateng/Layouts/Storyboards/Base.lproj/Main.storyboard
+++ b/PilkadaJateng/Layouts/Storyboards/Base.lproj/Main.storyboard
@@ -56,11 +56,15 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="0.33725490196078434" blue="0.38039215686274508" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="HqP-zN-VHl"/>
                     </view>
                     <navigationItem key="navigationItem" title="Buat Akun" id="7Jr-OM-wju">
-                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="fLx-Mg-Bta"/>
+                        <barButtonItem key="leftBarButtonItem" title="Batal" id="ZTl-dr-voh">
+                            <connections>
+                                <action selector="batal" destination="BpK-e4-5QT" id="1xe-mf-Cbg"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="displayNameTextField" destination="wZp-Kp-4Tc" id="Cst-xC-mx0"/>
@@ -605,7 +609,7 @@
             </objects>
             <point key="canvasLocation" x="3386.25" y="1575"/>
         </scene>
-        <!--Ringkasan Wacana View Controller-->
+        <!--Detail Tips-->
         <scene sceneID="sZS-VU-6im">
             <objects>
                 <viewController id="vSX-Hs-Sww" customClass="RingkasanWacanaViewController" customModule="PilkadaJateng" customModuleProvider="target" sceneMemberID="viewController">
@@ -668,7 +672,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hFo-P7-6xF"/>
                     </view>
-                    <navigationItem key="navigationItem" id="r9a-fw-yB3">
+                    <navigationItem key="navigationItem" title="Detail Tips" id="r9a-fw-yB3">
                         <barButtonItem key="rightBarButtonItem" title="Selesai" id="wol-bU-52f">
                             <connections>
                                 <action selector="selesai" destination="vSX-Hs-Sww" id="DLb-dW-Cvh"/>
@@ -1614,11 +1618,6 @@
                                 <action selector="selesaiButton:" destination="hbl-a4-ksm" id="4Np-p0-Sag"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" image="discussion_50" id="owf-5i-kZy">
-                            <connections>
-                                <action selector="toChatDiscussion" destination="hbl-a4-ksm" id="l1F-B5-Yw4"/>
-                            </connections>
-                        </barButtonItem>
                     </navigationItem>
                     <size key="freeformSize" width="320" height="1500"/>
                     <connections>
@@ -1665,11 +1664,6 @@
                                 <action selector="selesaiButton:" destination="Ogd-S1-P0h" id="ZqM-V9-dcE"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" image="discussion_50" id="tqv-eZ-4ld">
-                            <connections>
-                                <action selector="toChatDiscussion" destination="Ogd-S1-P0h" id="dY2-E5-P9z"/>
-                            </connections>
-                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="visiLabel" destination="dxV-xc-yfZ" id="yMl-C0-XcZ"/>
@@ -1683,29 +1677,10 @@
         <scene sceneID="gBV-5N-00r">
             <objects>
                 <tableViewController id="N2w-Bp-y9U" customClass="ProgramTableViewController" customModule="PilkadaJateng" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="7zO-aM-ovD">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="7zO-aM-ovD">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProgramCell" textLabel="gdT-j8-qax" style="IBUITableViewCellStyleDefault" id="jGB-AA-u4w">
-                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jGB-AA-u4w" id="7Gi-A0-bXo">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="gdT-j8-qax">
-                                            <rect key="frame" x="16" y="0.0" width="288" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="N2w-Bp-y9U" id="2Pq-Lx-Aaz"/>
                             <outlet property="delegate" destination="N2w-Bp-y9U" id="u4u-3j-j6E"/>
@@ -1715,11 +1690,6 @@
                         <barButtonItem key="leftBarButtonItem" title="Tutup" id="df0-C2-NoJ">
                             <connections>
                                 <action selector="selesaiButton:" destination="N2w-Bp-y9U" id="bon-L7-AmF"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" image="discussion_50" id="YWc-sa-hoY">
-                            <connections>
-                                <action selector="toChatDiscussion" destination="N2w-Bp-y9U" id="pji-gJ-18e"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
